<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>io.github.dao1230source</groupId>
        <artifactId>parent</artifactId>
        <version>0.0.12</version>
        <relativePath/>
    </parent>

    <artifactId>spring-extension-starter</artifactId>
    <packaging>pom</packaging>
    <properties>
        <spring-extension-starter-version>0.0.12</spring-extension-starter-version>
        <java.version>21</java.version>
    </properties>

    <modules>
        <module>spring-extension-starter-parent</module>
        <module>spring-extension-starter-common</module>
        <module>spring-extension-starter-rest</module>
        <module>spring-extension-starter-cache</module>
        <module>spring-extension-starter-trace</module>
        <module>spring-extension-starter-uid</module>
        <module>spring-extension-starter-redis</module>
        <module>spring-extension-starter-log</module>
        <module>spring-extension-starter-mq</module>
        <module>spring-extension-starter-i18n</module>
        <module>spring-extension-starter-object</module>
        <module>spring-extension-starter-doc</module>
    </modules>

    <dependencies>
<!--        <dependency>-->
<!--            <groupId>org.springframework.boot</groupId>-->
<!--            <artifactId>spring-boot-configuration-processor</artifactId>-->
<!--        </dependency>-->
<!--        <dependency>-->
<!--            <groupId>org.springframework.boot</groupId>-->
<!--            <artifactId>spring-boot-autoconfigure-processor</artifactId>-->
<!--        </dependency>-->
        <!--
        <dependency>
            <groupId>io.github.dao1230source</groupId>
            <artifactId>utility</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.data</groupId>
            <artifactId>spring-data-redis</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-autoconfigure</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-web</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-webmvc</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-log4j2</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.cloud</groupId>
            <artifactId>spring-cloud-stream</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-data-redis</artifactId>
        </dependency>
        <dependency>
            <groupId>org.hibernate.validator</groupId>
            <artifactId>hibernate-validator</artifactId>
        </dependency>
        <dependency>
            <groupId>org.aspectj</groupId>
            <artifactId>aspectjweaver</artifactId>
        </dependency>
        <dependency>
            <groupId>org.redisson</groupId>
            <artifactId>redisson</artifactId>
        </dependency>
        &lt;!&ndash; others &ndash;&gt;
        <dependency>
            <groupId>com.squareup.retrofit2</groupId>
            <artifactId>retrofit</artifactId>
        </dependency>
        <dependency>
            <groupId>com.squareup.okio</groupId>
            <artifactId>okio-jvm</artifactId>
        </dependency>
        <dependency>
            <groupId>com.squareup.retrofit2</groupId>
            <artifactId>converter-jackson</artifactId>
        </dependency>
        <dependency>
            <groupId>net.ttddyy</groupId>
            <artifactId>datasource-proxy</artifactId>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-pool2</artifactId>
        </dependency>
-->
    </dependencies>

    <name>spring-extension-starter</name>
    <description>
        Extensions based on springboot, including spring cache extensions, international components,
        okHttp encapsulation, business exception enumeration specifications, unique IDs, etc.
    </description>
    <url>https://github.com/Dao1230source/spring-extension-starter.git</url>
    <licenses>
        <license>
            <name>The Apache Software License, Version 2.0</name>
            <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
        </license>
    </licenses>
    <developers>
        <developer>
            <name>Zeng FuGen</name>
            <email>dao1230.source@gmail.com</email>
            <organization>dao1230</organization>
            <organizationUrl>https://github.com/Dao1230source</organizationUrl>
        </developer>
    </developers>
    <scm>
        <connection>scm:git:git://github.com/Dao1230source/spring-extension-starter.git</connection>
        <developerConnection>scm:git:ssh://Dao1230source/spring-extension-starter.git</developerConnection>
        <url>https://github.com/Dao1230source/spring-extension-starter/tree/master</url>
    </scm>
</project>